# TeraStore

./: .dockerignore  .gitignore  README.md  docker-compose-dev.yml  docker-compose-prod.yml  docker-compose-test-local.yml  docker-compose-test.yml  docker-compose.dev.yml  docker-compose.yml
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  test-backend.yml  test-frontend.yml  tests.yml
backend/: README.md  asgi.py  pyproject.toml
backend/api/: __init__.py  config.py  database.py  main.py
backend/api/auth/: auth_handler.py  crud.py  models.py  views.py
backend/api/public/: __init__.py
backend/api/public/attrs/: crud.py  models.py  views.py
backend/api/public/auth/: auth_handler.py  crud.py  helpers.py  models.py  views.py
backend/api/public/device/: crud.py  models.py  views.py
backend/api/public/pulse/: crud.py  helpers.py  models.py  views.py
backend/api/public/user/: views.py
backend/api/utils/: exception_handlers.py  exceptions.py  helpers.py  logging.py  mock_data_generator.py  paths.py  types.py
backend/tests/: conftest.py  test_device.py  test_main.py
backend/tests/api/: test_config.py
backend/tests/api/public/attrs/: test_views.py
backend/tests/api/public/auth/: test_views.py
backend/tests/api/public/device/: test_crud.py  test_views.py
backend/tests/api/public/pulse/: test_views.py
backend/tests/api/utils/: test_paths.py
docker/: Dockerfile.backend  Dockerfile.backend.dev  Dockerfile.backend.prod  Dockerfile.backend.test  Dockerfile.frontend  Dockerfile.frontend.dev  Dockerfile.frontend.prod
frontend/: README.md  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: interfaces.ts  main.tsx  router.tsx  store.ts
frontend/src/api/: factory.ts  index.ts
frontend/src/assets/: valid-annotated-pulse-example.json
frontend/src/auth/: accessToken.ts  auth-service.ts  index.ts
frontend/src/classes/: AttrKey.ts  FilterResult.ts  Pulse.ts  PulseFilter.ts  index.ts
frontend/src/components/: AdminDashboard.tsx  App.tsx  FilterMenu.tsx  Header.tsx  MatchingPulses.tsx  PulseUploader.tsx  RecommendedFilterCard.tsx  RecommendedFilters.tsx
frontend/src/helpers/: LRUCache.ts  data-io.ts  index.ts
frontend/src/hooks/: index.tsx
frontend/src/interfaces/: auth.ts  backend.ts  index.ts  mantine.ts
frontend/src/pages/: Admin.tsx  Home.tsx  Register.tsx  Signin.tsx
frontend/tests/: App.test.tsx  apiMocks.tsx  setupTest.ts  store-utils.tsx  testing-utils.tsx
frontend/tests/api/: index.test.ts
frontend/tests/auth/: auth-service.test.ts
frontend/tests/classes/: Pulse.test.ts
frontend/tests/components/: FilterMenu.test.tsx  RecommendedFilters.test.tsx
frontend/tests/helpers/: data-io.test.ts  valid-annotated-pulse-list.json
frontend/tests/testing-assets/: annotated-pulse-wrong-date.json  annotated-pulse-wrong-device-id.json  invalid-annotated-pulse.json  valid-annotated-pulse-list.json  valid-annotated-pulse-with-error.json  valid-annotated-pulse.json
nginx/: nginx.conf
scripts/: dev_down.sh  dev_up.sh  entrypoint.sh  run_all_tests.sh  run_black.sh  run_mypy.sh  run_pytest.sh  run_ruff.sh  run_ruff_check.sh  run_ruff_format.sh  run_vitest.sh
