[project]
name = "api"
description = "Python TeraStore API"
authors = [
  { name = "Mads Ehrhorn", email = "mehkj@dtu.dk" },
  { name = "Bjørn Mølvig", email = "bhymo@dtu.dk" },
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
dynamic = ["version"]

dependencies = [
  "fastapi[all]==0.111.1",
  "sqlmodel==0.0.19",
  "pydantic==2.8.2",
  "pydantic-settings==2.3.4",
  "psycopg2-binary==2.9.9",
  "python-jose[cryptography]==3.3.0",
  "bcrypt==4.1.3",
]

[project.optional-dependencies]
test = [
  "mypy>=1.10,<1.11",
  "ruff>=0.5,<0.6",
  "pytest==7.4.3",
  "types-psycopg2==2.9.21.19",
  "pytest-cov==4.1.0",
  "types-python-jose==3.3.4.8",
]
dev = [
  "mypy>=1.10,<1.11",
  "ruff>=0.5,<0.6",
  "pytest==7.4.3",
  "types-psycopg2==2.9.21.19",
  "pytest-cov==4.1.0",
  "types-python-jose==3.3.4.8",
  "types-passlib==1.7.7.13",
]

[tool.mypy]
plugins = ["pydantic.mypy"]
exclude = ["build", "api.egg-info"]

# from https://careers.wolt.com/en/blog/tech/professional-grade-mypy-configuration & https://docs.pydantic.dev/latest/integrations/mypy/
disallow_any_unimported = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
no_implicit_optional = true
disallow_untyped_defs = true
show_error_codes = true


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 88
target-version = "py312"
lint.select = ["ALL"]
lint.ignore = [
  "D100", # allow undocumented public modules
  "D101", # allow undocumented public class
  "D102", # allow undocumented public method
  "D103", # allow undocumented public function
  "D104", # allow undocumented public package
  "D106", # allow undocumented public nested class
  "D107", # allow undocumented public __init__
  "D203", # allow 0 black lines before class docstring
  "D213", # allow multiline docstring to start on first line
  "UP040", # "type" keyword not implemented in mypy yet
  "ISC001", # ruff recommends disabling when using the formatter
  "COM812" # ruff recommends disabling when using the formatter
]

[tool.ruff.lint.per-file-ignores]
# from https://github.com/astral-sh/ruff/issues/4368
"tests/**/*.py" = [
  "S101",    # asserts allowed in tests...
  "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
  "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
  "PLR2004", # Magic value used in comparison
  "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
  "S106",    # Allow hardcoded passwords in tests
]
"api/**/crud.py" = [
  "B008", # To be able to use FastAPI Depends() in function calls
]
"api/**/views.py" = [
  "B008", # To be able to use FastAPI Depends() in function calls
]
"api/**/helpers.py" = [
  "B008", # To be able to use FastAPI Depends() in function calls
]
"api/**/auth_handler.py" = [
  "B008", # To be able to use FastAPI Depends() in function calls
]
"api/main.py" = ["ARG001"] # Unused function args


[tool.coverage.run]
omit = [
  "./api/utils/mock_data_generator.py", # do no require testing of mock data creation
]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
